<resources>
    <string name="app_name">SahiCareer</string>
    <string name="Career_Assessment">Career Assessment</string>
    <string name="Career_Counseling">Career Counseling</string>
    <string name="Job_internships">Jobs And Internships</string>
    <string name="Career_Information">Career Information</string>
    <string name="Resume_Service">Resume Service</string>
    <string name="Find_Mentor">Find Mentor</string>
    <string name="Coming_soon">Coming Soon</string>
    <string name="top_line">Apply for the best Private and Government jobs</string>
    <string name="govtjobs">GOVERNMENT JOBS</string>
    <string name="pvtjobs">PRIVATE JOBS</string>
    <string name="internship">INTERNSHPS</string>
    <string name="Open">INTERNSHPS</string>
    <string name="Close">INTERNSHPS</string>
    <string name="submit">Submit</string>
    <string name="mandatorystar">*</string>
    <string name="aboutus_desc1">Sahicareer.com, an IIM alumni initiative, is your personal career guide. It is a scientific career exploration
                                 platform, designed to enable you to decide the best career for yourself. A career needs to be
                                 well planned, and we need professional guidance while deciding the appropriate career. sahicareer provides all the tools to assist you in the process of evaluating
                                 the most appropriate career option.</string>
    <string name="aboutus_desc2">Allow SahiCareer to help you with your career growth,because your career matters the most!</string>
    <string name="customersays1">”Sahicareer has lead me to a positive career path. I was really confused what to do, but by mere help of them I finalize what to do with my future. Thank you SahiCareer for your efforts on me”.</string>
    <string name="customername1">Ms. Neethu, College Student</string>
    <string name="customersays2">”Had a very open, friendly and healthy discussion with the counsellor. She gave sufficient time to listen and understand the concerns. The suggestions given were unbiased and practical”</string>
    <string name="customername2">-Mr. Manas Tamhane, Job Aspirant</string>
    <string name="customersays3">”Sahicareer is the right platform which gives correct guidance to people who are aiming success in their career. Mentors are really helpful and experienced in various industries”.</string>
    <string name="byclicking"> By continuing, you agree to our</string>
    <string name="termsandcondition"><u>Terms &amp; Conditions</u> and</string>
    <string name="privacypolicy"><u>Privacy Policy</u>
    </string>
    <string name="terms_condition_txt_1">PLEASE READ THESE TERMS CAREFULLY BEFORE USING THE ONLINE PAYMENT
                                        FACILITY. USING THE ONLINE PAYMENT FACILITY ON THIS WEBSITE INDICATES
                                        THAT YOU ACCEPT THESE TERMS. IF YOU DO NOT ACCEPT THESE TERMS DO NOT
                                        USE THIS FACILITY.</string>
    <string name="terms_condition_txt_2">All payments are subject to the following terms &amp; conditions:</string>
    <string name="terms_condition_txt_3">Normally payment is required before or at the time of enrolment/affiliation/registration /purchasing
                                        a product or facility etc with/from EBSC Technologies Pvt Ltd. (SahiCareer). All Fees quoted are in
                                        Indian Rupees. The EBSC Technologies Pvt Ltd. (SahiCareer) reserves the right to change the fees
                                        as per government directions without informing the customer a priori. Your payment will normally
                                        reach the EBSC Technologies Pvt Ltd. (SahiCareer) account every Friday provided the amount of
                                        payment is not less than INR 1000/-. EBSC Technologies Pvt Ltd. (SahiCareer) is not responsible
                                        for any delay in receipt of fee payment due to the incorrect account number or incorrect personal
                                        details. The EBSC Technologies Pvt Ltd. (SahiCareer) also cannot accept liability if payment is
                                        refused or declined by the credit/ debit card supplier for any reason. In no event will the EBSC
                                        Technologies Pvt Ltd. (SahiCareer) be liable for any damages whatsoever arising out of the use,
                                        inability to use, or the results of use of this site, any websites linked to this site, or the materials or
                                        information contained at any or all such sites, whether based on warranty, contract, tort or any other
                                        legal theory and whether or not advised of the possibility of such damages.</string>
    <string name="terms_condition_txt_4">The customer agrees that EBSC Technologies Pvt Ltd. (SahiCareer) will not be liable to anyone for
                                        any loss or damage, either actual or consequential, arising out of or relating to these terms, or to
                                        your (or any third party\'s) use or inability to use a site, or to your placement of content on a site, or
                                        to your reliance upon information obtained from or through a site, in particular, EBSC Technologies
                                        Pvt Ltd. (SahiCareer) will have no liability for any consequential, indirect, punitive, special or
                                        incidental damages, whether foreseeable or unforeseeable, (including, but not limited to, claims for
                                        defamation, errors, loss of data, or interruption in availability of data), arising out of or relating to
                                        these terms, your use or inability to use a site, or any purchases on this site, or your placement of
                                        content on a site, or to your reliance upon information obtained from or through a site, whether
                                        based in contract, tort, statutory or other law, except only in the case of death or personal injury
                                        where and only to the extent that applicable law requires such liability.</string>
    <string name="terms_condition_txt_5">Refund Policy</string>
    <string name="terms_condition_txt_6">Refunds, if applicable, at the discretion of the Management of EBSC Technologies Pvt. Ltd.
                                        (SahiCareer), will only be made to the payment method used for the original transaction. For the
                                        avoidance of doubt, nothing in this Policy shall require the EBSC Technologies Pvt. Ltd.
                                        (SahiCareer) to refund the Fees (or part thereof) unless such Fees (or part thereof) has previously
                                        been paid. </string>
    <string name="terms_condition_txt_7">Security:</string>
    <string name="terms_condition_txt_8">The online payment transactions are executed using state of the art technology to ensure secure
                                        transaction. The EBSC Technologies Pvt. Ltd. (SahiCareer) shall not be liable for any failure by the
                                        customer or third party making payment of Fees to properly protect data from being seen on their
                                        screen by other persons or otherwise obtained by such persons, during the online payment process
                                        or in respect of any omission to provide accurate information in the course of the online payment
                                        process.</string>
    <string name="terms_condition_txt_9">Service Provider:</string>
    <string name="terms_condition_txt_10">EBSC Technologies Pvt Ltd. (SahiCareer) is not directly involved in the online payment but
                                        through service provider Avenues (India) Pvt. Ltd. Mumbai. In the event that the customer does not
                                        receive confirmation within 6 days of making the payment it is the responsibility of the customer to
                                        check with the EBSC Technologies Pvt Ltd. (SahiCareer) that the payment has been accepted. The
                                        customer shall remain responsible for the Fees until such time as the confirmation as referred to
                                        above is received from the EBSC Technologies Pvt Ltd. (SahiCareer) in relation to each of these
                                        and any outstanding amounts owed to the EBSC Technologies Pvt Ltd. (SahiCareer). </string>
    <string name="terms_condition_txt_11">Privacy Policy:</string>
    <string name="terms_condition_txt_12">This Privacy Policy applies to all of the products, services, and websites offered by EBSC
                                        Technologies Pvt Ltd. (SahiCareer). Sometimes, we may post product specific privacy notices or
                                        Help Centre materials to explain our products in more detail.</string>
    <string name="terms_condition_txt_13">Website Detail:</string>
    <string name="terms_condition_txt_14">Please note that the EBSC Technologies Pvt Ltd. (SahiCareer) holds no responsibility for incorrect
                                        or no longer correct statements, quotes or descriptions and thereby excludes liability for any losses
                                        resulting from such wrong information. Further, EBSC Technologies Pvt Ltd. (SahiCareer) has
                                        every right to bring about legal action on students who misuse/alter / reproduce the content/
                                        information available on the website.</string>
    <string name="terms_condition_txt_15">Data Privacy Policy:</string>
    <string name="terms_condition_txt_16">The EBSC Technologies Pvt Ltd. (SahiCareer) ensures the data privacy policy as per government
                                        norms prevalent from time to time. Contact Details:
                                        Email: info@sahicareer.com </string>
    <string name="about_us_1">Overview</string>
    <string name="about_us_2">Sahicareer.com, an IIM alumni initiative, is your personal career guide. sahicareer.com is a scientific career
        exploration platform, designed to enable you to decide the best career for yourself.
        \n\nA career needs to be well planned, and we need professional guidance while deciding the appropriate career. Each one of us desire
        different qualities from our careers – growth, stability, money, responsibility – or all of it. sahicareer.com provides all the tools
        to assist you in the process of evaluating the most appropriate career option.
        \n\nAnd, there’s more! To build your resume in a professional format, avail individual guidance from professionals, get mentoring from
        someone who has taken a similar journey, or access data on your career choice, we have got it covered for you! Allow sahicareer.com
        to help you with your career growth, because your career matters the most!</string>
    <string name="about_us_3">Vision</string>
    <string name="about_us_4">Holistic career guidance platform that works with youth to help them understand strengths, channelize their
        careers and assist in achieving their career goals, one step at a time.</string>
    <string name="about_us_5">Mission</string>
    <string name="about_us_6">Provide high quality career services , and be the first choice destination for people seeking any career assistance.</string>
</resources>