<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#132F45">


    <ScrollView
        android:id="@+id/CA_main_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1150dp"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".125"
                    android:gravity="center|left|top"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/terms_condition_txt_1"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".0"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".05"
                    android:gravity="center|left|top"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/terms_condition_txt_2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".425"
                    android:gravity="center|left|top"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/terms_condition_txt_3"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".025"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".375"
                    android:gravity="center|left|top"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/terms_condition_txt_4"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".15"
                android:gravity="center|left|top"
                android:textStyle="bold"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/terms_condition_txt_5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".85"
                android:gravity="center|left|top"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/terms_condition_txt_6"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".15"
                android:gravity="center|left|top"
                android:textStyle="bold"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/terms_condition_txt_7"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".85"
                android:gravity="center|left|top"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/terms_condition_txt_8"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".1"
                    android:gravity="center|left|top"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/terms_condition_txt_9"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".9"
                    android:gravity="center|left|top"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/terms_condition_txt_10"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".2"
                    android:gravity="center|left|top"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/terms_condition_txt_11"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".8"
                    android:gravity="center|left|top"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/terms_condition_txt_12"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".15"
                    android:gravity="center|left|top"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/terms_condition_txt_13"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".85"
                    android:gravity="center|left|top"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/terms_condition_txt_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".15"
                    android:gravity="center|left|top"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/terms_condition_txt_15"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".85"
                    android:gravity="center|left|top"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/terms_condition_txt_16"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>