<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutUs">

    <ScrollView
        android:id="@+id/CA_main_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/about_us_1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".9"
                    android:gravity="left|center|top"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/about_us_2"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".4"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/about_us_3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    android:gravity="center|left|top"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/about_us_4"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".4"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/about_us_5"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    android:gravity="center|left|top"
                    android:textSize="14sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/about_us_6"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    android:orientation="horizontal">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".3"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".4"
                        android:src="@drawable/logo_new_sc"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".3"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".4"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="Version 1.0"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>