<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="com.bangalore.sahicareer.RegistrationPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/linearlayoutborder"
        android:padding="30dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".05"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".05"
            android:text="Enter your"
            android:textSize="14sp"
            android:typeface="serif"
            android:gravity="center|left"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".05"
            android:text="Mobile number"
            android:textSize="16sp"
            android:typeface="serif"
            android:textStyle="bold"
            android:gravity="center|left"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".075"
            android:text="valid mobile number is needed to apply"
            android:textSize="12sp"
            android:typeface="serif"
            android:gravity="center|left"
            android:textColor="@color/mediumgrey"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".075"/>
        <EditText
            android:id="@+id/edit_reg_mobileno"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:inputType="number"
            android:gravity="center|left"
            android:maxLength="10"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:hint="9000000000"
            android:typeface="serif"
            android:background="@null"
            android:padding="5dp"
            android:textSize="30sp"
            android:textColor="@color/black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".05"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:background="@drawable/linearlayoutborderfortermscondition"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".3">
                <CheckBox
                    android:id="@+id/cb_termscondition"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".15"
                    android:layout_centerHorizontal="true"
                    android:gravity="top"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".85"
                    android:textStyle="bold"
                    android:paddingTop="0dp"
                    android:gravity="center|left"
                    android:typeface="serif"
                    android:textSize="12sp"
                    android:text="@string/byclicking"
                    />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".05"/>
            <TextView
                android:id="@+id/txt_terms_conditions"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".25"
                android:textStyle="bold"
                android:paddingLeft="35dp"
                android:typeface="serif"
                android:textSize="12sp"
                android:text="@string/termsandcondition"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".05"/>
            <TextView
                android:id="@+id/txt_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".25"
                android:textStyle="bold"
                android:paddingLeft="35dp"
                android:typeface="serif"
                android:textSize="12sp"
                android:text="@string/privacypolicy"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".15"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".175"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1">
            <Button
                android:id="@+id/bt_reg_continue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                android:background="@drawable/roundedbutton_otp"
                android:text="Agree &amp; Continue"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:typeface="serif"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/bt_reg_decline"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".4"
                android:background="@color/white"
                android:text="Decline"
                android:textAllCaps="false"
                android:typeface="serif"
                android:textSize="12sp"
                android:textColor="@color/blue"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".075"/>

    </LinearLayout>
</LinearLayout>